--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -16,4 +16,7 @@
   .error {
     @apply text-red-500 dark:text-red-400;
   }
+  .range-slider {
+    @apply w-full h-4 bg-gray-200 rounded-lg appearance-none cursor-pointer dark:bg-gray-700;
+  }
 }
