--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -13,10 +13,27 @@
   .btn-primary {
     @apply px-5 py-2 text-white bg-blue-600 rounded-md hover:bg-blue-500;
   }
+
+  .btn-secondary {
+    @apply px-5 py-2 text-white bg-gray-600 rounded-md hover:bg-gray-500;
+  }
+
+  .btn-danger {
+    @apply px-5 py-2 text-white bg-red-500 rounded-md hover:bg-red-600;
+  }
+
   .error {
     @apply text-red-500 dark:text-red-400;
   }
   .range-slider {
     @apply w-full h-4 bg-gray-200 rounded-lg appearance-none cursor-pointer dark:bg-gray-700;
+  }
+
+  .input-filter-l {
+    @apply text-sm text-gray-900 border border-gray-300 rounded-l-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500;
+  }
+
+  .input-filter-r {
+    @apply text-sm text-gray-900 border border-l-0 border-gray-300 rounded-r-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500;
   }
 }
